# trainspotter

./: .gitignore  README.md  app.py  config.json  datamodels.py  pyproject.toml  trainspotter.py  utils.py  vbb_api.py
.github/workflows/: ci.yml
data/: vbb_stations.json
install/: install.sh  projects_trainspotter.service
scripts/: fetch_stations.py  test_image_render.py
src/: __init__.py  app.py  config.py  datamodels.py  departures_fallback.py  image_generator.py  trainspotter.py  utils.py  vbb_api.py
src/fonts/: .gitkeep
static/: app.js  styles.css
templates/: index.html
tests/: conftest.py  test_app.py  test_config.py  test_datamodels.py  test_departures_fallback.py  test_image_generator.py  test_trainspotter.py  test_utils.py  test_vbb_api.py
trainspotter_eink/: README.md  trainspotter_eink.ino
